Errorprone added + all bugs removed